[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brimble-sandbox"
version = "0.1.2"
description = "Python SDK for the Brimble Sandbox API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Brimble Engineering" }]
license = "MIT"
dependencies = [
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[project.urls]
Homepage = "https://brimble.io"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brimble_sandbox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
